@@ -522,11 +522,6 @@ modifier|*
 modifier|*
 name|argv
 parameter_list|,
-name|QApplication
-operator|::
-name|Type
-name|type
-parameter_list|,
 name|int
 name|flags
 parameter_list|)
@@ -542,7 +537,9 @@ argument_list|)
 block|{
 name|application_type
 operator|=
-name|type
+name|QApplicationPrivate
+operator|::
+name|Gui
 expr_stmt|;
 ifndef|#
 directive|ifndef
@@ -1606,81 +1603,7 @@ directive|endif
 operator|:
 name|QGuiApplication
 argument_list|(
-argument|*new QApplicationPrivate(argc, argv, GuiClient, _internal)
-argument_list|)
-block|{
-name|Q_D
-argument_list|(
-name|QApplication
-argument_list|)
-block|;
-name|d
-operator|->
-name|construct
-argument_list|()
-block|; }
-comment|/*!     Constructs an application object with \a argc command line arguments in     \a argv.      \warning The data referred to by \a argc and \a argv must stay valid for     the entire lifetime of the QApplication object. In addition, \a argc must     be greater than zero and \a argv must contain at least one valid character     string.      The following example shows how to create an application that uses a     graphical interface when available.      \obsolete      \snippet code/src_gui_kernel_qapplication.cpp 0 */
-DECL|function|QApplication
-name|QApplication
-operator|::
-name|QApplication
-operator|(
-name|int
-operator|&
-name|argc
-operator|,
-name|char
-operator|*
-operator|*
-name|argv
-operator|,
-name|bool
-name|GUIenabled
-operator|,
-name|int
-name|_internal
-operator|)
-operator|:
-name|QGuiApplication
-argument_list|(
-argument|*new QApplicationPrivate(argc, argv, GUIenabled ? GuiClient : Tty, _internal)
-argument_list|)
-block|{
-name|Q_D
-argument_list|(
-name|QApplication
-argument_list|)
-block|;
-name|d
-operator|->
-name|construct
-argument_list|()
-block|;}
-comment|/*!     Constructs an application object with \a argc command line arguments in     \a argv.      \warning The data referred to by \a argc and \a argv must stay valid for     the entire lifetime of the QApplication object. In addition, \a argc must     be greater than zero and \a argv must contain at least one valid character     string. */
-DECL|function|QApplication
-name|QApplication
-operator|::
-name|QApplication
-operator|(
-name|int
-operator|&
-name|argc
-operator|,
-name|char
-operator|*
-operator|*
-name|argv
-operator|,
-name|Type
-name|type
-operator|,
-name|int
-name|_internal
-operator|)
-operator|:
-name|QGuiApplication
-argument_list|(
-argument|*new QApplicationPrivate(argc, argv, type, _internal)
+argument|*new QApplicationPrivate(argc, argv, _internal)
 argument_list|)
 block|{
 name|Q_D
@@ -1710,7 +1633,7 @@ operator|=
 operator|(
 name|application_type
 operator|!=
-name|QApplication
+name|QApplicationPrivate
 operator|::
 name|Tty
 operator|)
@@ -1885,7 +1808,7 @@ if|if
 condition|(
 name|application_type
 operator|!=
-name|QApplication
+name|QApplicationPrivate
 operator|::
 name|Tty
 condition|)
@@ -2042,44 +1965,6 @@ operator|.
 name|toInt
 argument_list|()
 expr_stmt|;
-block|}
-end_function
-begin_comment
-comment|/*!     Returns the type of application (\l Tty, GuiClient, or     GuiServer). The type is set when constructing the QApplication     object. */
-end_comment
-begin_function
-DECL|function|type
-name|QApplication
-operator|::
-name|Type
-name|QApplication
-operator|::
-name|type
-parameter_list|()
-block|{
-if|if
-condition|(
-name|QApplicationPrivate
-operator|::
-name|instance
-argument_list|()
-condition|)
-return|return
-operator|(
-name|QCoreApplication
-operator|::
-name|Type
-operator|)
-name|QApplicationPrivate
-operator|::
-name|instance
-argument_list|()
-operator|->
-name|application_type
-return|;
-return|return
-name|Tty
-return|;
 block|}
 end_function
 begin_comment
@@ -3289,20 +3174,24 @@ name|app_style
 return|;
 if|if
 condition|(
-name|qApp
-operator|->
-name|type
-argument_list|()
-operator|==
+operator|!
+name|qobject_cast
+argument_list|<
 name|QApplication
+operator|*
+argument_list|>
+argument_list|(
+name|QCoreApplication
 operator|::
-name|Tty
+name|instance
+argument_list|()
+argument_list|)
 condition|)
 block|{
 name|Q_ASSERT
 argument_list|(
 operator|!
-literal|"No style available in non-gui applications!"
+literal|"No style available without QApplication!"
 argument_list|)
 expr_stmt|;
 return|return
