@@ -219,6 +219,23 @@ argument|bool autoSipEnabled READ autoSipEnabled WRITE setAutoSipEnabled
 argument_list|)
 name|public
 operator|:
+ifdef|#
+directive|ifdef
+name|Q_QDOC
+name|QApplication
+argument_list|(
+name|int
+operator|&
+name|argc
+argument_list|,
+name|char
+operator|*
+operator|*
+name|argv
+argument_list|)
+block|;
+else|#
+directive|else
 name|QApplication
 argument_list|(
 name|int
@@ -233,51 +250,13 @@ argument_list|,
 name|int
 operator|=
 name|ApplicationFlags
-argument_list|)
-block|;
-ifdef|#
-directive|ifdef
-name|QT_DEPRECATED
-name|QT_DEPRECATED
-name|QApplication
-argument_list|(
-argument|int&argc
-argument_list|,
-argument|char **argv
-argument_list|,
-argument|bool GUIenabled
-argument_list|,
-argument|int = ApplicationFlags
 argument_list|)
 block|;
 endif|#
 directive|endif
-name|QApplication
-argument_list|(
-name|int
-operator|&
-name|argc
-argument_list|,
-name|char
-operator|*
-operator|*
-name|argv
-argument_list|,
-name|Type
-argument_list|,
-name|int
-operator|=
-name|ApplicationFlags
-argument_list|)
-block|;
 name|virtual
 operator|~
 name|QApplication
-argument_list|()
-block|;
-specifier|static
-name|Type
-name|type
 argument_list|()
 block|;
 specifier|static
